# wordle_solver

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: init.cmd  run_clang_format.cmd
src/: CMakeLists.txt  main.cpp
